Change service name

--- a/DemoWcfProject/DemoWcfProject.csproj
+++ b/DemoWcfProject/DemoWcfProject.csproj
@@ -44,8 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DemoWcfService.cs" />
-    <Compile Include="IDemoWcfService.cs" />
+    <Compile Include="MessageService.cs" />
+    <Compile Include="IMessageService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
