--- a/DemoWcfProject/app.config
+++ b/DemoWcfProject/app.config
@@ -10,8 +10,8 @@
             </serviceBehaviors>
         </behaviors>
         <services>
-            <service name="DemoWcfProject.DemoWcfService">
-                <endpoint address="" binding="basicHttpBinding" contract="DemoWcfProject.IDemoWcfService">
+            <service name="DemoWcfProject.MessageService">
+                <endpoint address="" binding="basicHttpBinding" contract="DemoWcfProject.IMessageService">
                     <identity>
                         <dns value="localhost" />
                     </identity>
