--- a/DemoWcfHost/App.config
+++ b/DemoWcfHost/App.config
@@ -6,15 +6,28 @@
 
 	<system.serviceModel>
 		<services>
-			<service name="DemoWcfProject.MessageService">
+			<service name="DemoWcfProject.MessageService" behaviorConfiguration="mexBehaviour">
 				<endpoint address="MessageService" binding="basicHttpBinding" contract="DemoWcfProject.IMessageService">				
 				</endpoint>
 				<endpoint address="MessageService" binding="netTcpBinding" contract="DemoWcfProject.IMessageService">
 				</endpoint>
 				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange">
 				</endpoint>
+				<host>
+					<baseAddresses>
+						<add baseAddress="http://localhost:8080/"/>
+						<add baseAddress="net.tcp://localhost:8090/"/>
+					</baseAddresses>
+				</host>
 			</service>
 		</services>
+		<behaviors>
+			<serviceBehaviors>
+				<behavior name="mexBehaviour">
+					<serviceMetadata httpGetEnabled="true"/>
+				</behavior>
+			</serviceBehaviors>
+		</behaviors>
 	</system.serviceModel>
 	
 </configuration>
