Add Windows Form Application Project and Update project content

--- a/DemoWcfClient/DemoWcfClient/Web.config
+++ b/DemoWcfClient/DemoWcfClient/Web.config
@@ -73,7 +73,7 @@
       </netTcpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:8082/MessageService" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IMessageService" contract="GetMessageService.IMessageService" name="BasicHttpBinding_IMessageService"/>
+      <endpoint address="http://localhost:8082/MessageService" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IMessageService" contract="GetMessageService.IMessageService" name="k"/>
       <endpoint address="net.tcp://localhost:8092/MessageService" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IMessageService" contract="GetMessageService.IMessageService" name="NetTcpBinding_IMessageService">
         <identity>
           <userPrincipalName value="EXCALIBUR-G770\Emrullah"/>
